# Dev-CT

./: .travis.yml  INSTALL-LINUX  README.md  changelog  config.h  config.status  configure  configure.ac  configure.in  makefile  makefile.in
docs/: README
src/: dct.cpp  version.h
