#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Developers Compression Tool], [1.2.05], [support@devworksosi.com])
AC_CONFIG_SRCDIR([src/dct.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_CHECK_PROG([ZIP], [zip], [/usr/bin/zip])
AC_CHECK_PROG([TAR], [tar], [/bin/tar])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([makefile])
AC_OUTPUT
